parse-display-tests/tests/compile_fail/from_str_struct_empty_capture_name.rs
use parse_display::FromStr;

#[derive(FromStr)]
#[from_str(regex = "(?P<>)")]
struct TestStruct;

fn main() {}
